@@ -35,6 +35,7 @@
 	flash9 : added flash.desktop.Clipboard* classes (added in flash10)
 	as3 : fixed Date.toString issue in flash.Boot (now use .toStringHX instead)
 		this will only work if .toString called explicitely on Date class
+	all : only allow "using" on Dynamic if first parameter is Dynamic
 	
 2010-01-09: 2.05
 	js : added js.Scroll
